fixed gear icon that was cut off

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -17,4 +17,11 @@ h1 {
     padding: 0;
     background-color: transparent;
     border: none;
+    z-index: 10;
+}
+
+.gear-icon img {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
